Fixed y overflow issue

--- a/src/app/landing.scss
+++ b/src/app/landing.scss
@@ -3,7 +3,7 @@
 .landing-container {
   position: relative;
   width: 100%;
-  height: calc(100% - 50px);
+  height: calc(100% - 52px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,9 +16,11 @@
 
   @media (max-width: $breakpoint-md) {
     background-image: url("/landing/lockers_md.jpg");
+    height: calc(100% - 62px);
   }
 
   @media (max-width: $breakpoint-sm) {
     background-image: url("/landing/lockers_sm.jpg");
+    height: calc(100% - 62px);
   }
 }
